# claude-code-server

./: .dockerignore  CLAUDE.md  Dockerfile  Makefile  README.md  compose.yml  example.env  litellm_config.yaml  pyproject.toml
.claude/: settings.json
.github/workflows/: test.yml
claude_code_server/: provider.py
tests/: conftest.py  test_integration.py  test_provider.py
